# pace_pcc_ml

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
config/: defaults.yaml
config/bands/: modis.yaml  pace_like.yaml  viirs.yaml
multioutput_regression/: environment.yml
multioutput_regression/notebooks/: oasim_00_b_eda.ipynb  oasim_03_all_rrs_env.ipynb  oasim_05_pipeline_full_hpo.ipynb  oasim_06_optimized_model_train.ipynb  oasim_07_optimized_trained_model_eval.ipynb  oasim_08_XAI.ipynb  oasim_09_sensitivity_analysis.ipynb  oasim_10_global_pfg_distributions.ipynb
multioutput_regression/pipeline/: p0_data_loader.py  p1_model_trainer.py  ppln_run_sagemaker.py
notebooks/: run_all.ipynb
notebooks/artifacts/pace_run/: best_params.json  manifest_production.json
src/phyx/: cli.py
src/phyx/config/: bandsets.yaml  config.py
src/phyx/legacy_code/multioutput_regression/: .gitignore
src/phyx/legacy_code/multioutput_regression/notebooks/: oasim_01_modeling_baseline.ipynb  oasim_02_xgb_all_rrs.ipynb  oasim_04_pipeline_test.ipynb  oasim_08_XAI.ipynb  oasim_09_sensitivity_analysis.ipynb
src/phyx/legacy_code/multioutput_regression/notebooks/_archive/: oasim_00_b_eda.ipynb
src/phyx/legacy_code/multioutput_regression/notebooks/scripts/: evaluate.py  (+1 more)
src/phyx/legacy_code/multioutput_regression/pipeline/: p2_optuna_hpo.py
src/phyx/pipeline/: data_loader.py  model_evaluator.py  model_trainer.py  optuna_hpo.py  shap_runner.py
src/phyx/synthesis/: __init__.py  metrics.py  shap_runner.py  shap_tools.py
src/phyx/xAI/: shap_runner.py
