[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "phyx"
version = "0.1.0"
description = "PACE PCC ML: clean, reproducible training, evaluation, and explainability"
readme = "README.md"
requires-python = "==3.12.*"
license = {text = "MIT"}
authors = [{name = "Erdem Karaköylü"}]
dependencies = [
  "numpy==2.2.6",
  "pandas==2.2.3",
  "scikit-learn==1.6.1",
  "xgboost==2.1.4",
  "optuna==4.4.0",
  "shap==0.46.0",
  "matplotlib==3.9.2",
  "pydantic==2.8.2",
  "pyyaml==6.0.2",
  "pyarrow==16.*",
  "typer==0.16.0",
  "loguru==0.7.3",
  "scipy==1.15.1"
]

[project.scripts]
phyx = "phyx.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/phyx"]

[tool.ruff]
line-length = 100
